fix next relply-row bleeding through popover

--- a/src/components/status/status.scss
+++ b/src/components/status/status.scss
@@ -167,7 +167,6 @@ $status-margin: 0.75em;
     line-height: 160%;
     max-width: 100%;
     align-items: stretch;
-    z-index: 2;
   }
 
   & .reply-to-popover,
